fix line wrapping in directoryUI

--- a/client/sass/imports/_codeEditor.sass
+++ b/client/sass/imports/_codeEditor.sass
@@ -43,7 +43,6 @@ $clickWidth: 3px
 
 .directory
 
-
 .directoryTop
   padding:
     top: 3px
@@ -69,9 +68,8 @@ $clickWidth: 3px
 .directoryTop:hover
   background-color: rgb(100, 100, 100, 0.5)
 
-
 .file
-
+  white-space: nowrap
 
 .file:hover
   background-color: rgb(100, 100, 100, 0.5)
